Make each event a different color
* Also added a workaround to force the calendar directive to reload. *
The thing is that as long as the directive's scope is active, when its ngModel changes, it will still render the old events instead of only redrawing the currently binded object.

--- a/client/app/visualizations/calendar/calendar.html
+++ b/client/app/visualizations/calendar/calendar.html
@@ -1,1 +1,1 @@
-<div id="full-calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+<div id="full-calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" ng-if="showCalendar"></div>
