Calendar: cleanup css, reuse existing class

--- a/client/app/visualizations/calendar/calendar.html
+++ b/client/app/visualizations/calendar/calendar.html
@@ -1,4 +1,4 @@
-<div class="pull-right full-calendar">
+<div class="pull-right t-header">
   <div class="btn-group dropdown" uib-dropdown="">
     <button type="button" class="btn btn-default btn-sm dropdown-toggle" aria-haspopup="true" uib-dropdown-toggle="" aria-expanded="false">
       Change Calendar View <span class="caret"></span>
@@ -20,4 +20,4 @@
   </div>
 </div>
 
-<div class="full-calendar" ui-calendar="uiConfig.calendar" calendar="theCalendar" ng-model="eventSources" ng-if="showCalendar"></div>
+<div class="t-header" ui-calendar="uiConfig.calendar" calendar="theCalendar" ng-model="eventSources" ng-if="showCalendar"></div>
