Calendar: Show popover with event details on mouseEnter + Do not require End date
* During the eventRender callback, it creates a boostrap popover template and adds it as an attribute to the html element.

--- a/client/app/visualizations/calendar/calendar-editor.html
+++ b/client/app/visualizations/calendar/calendar-editor.html
@@ -25,8 +25,10 @@
 
   <div class="form-group">
     <label class="control-label">End Date</label>
-    <ui-select name="form-control" required ng-model="visualization.options.endDate">
-      <ui-select-match placeholder="Choose column...">{{$select.selected}}</ui-select-match>
+    <ui-select name="form-control" ng-model="visualization.options.endDate" class="clearable">
+      <ui-select-match allow-clear="true" placeholder="Choose column...">
+        {{$select.selected}}
+      </ui-select-match>
       <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.startDate | remove:visualization.options.groupBy">
         <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
         <small class="text-muted" ng-bind="columns[column].type"></small>
