--- a/client/app/visualizations/calendar/calendar-editor.html
+++ b/client/app/visualizations/calendar/calendar-editor.html
@@ -1,51 +1,75 @@
 <div>
-  <hr/>
 
-  <div class="form-group">
-    <label class="control-label">Event Title</label>
-    <ui-select name="form-control" required ng-model="visualization.options.eventTitle">
-      <ui-select-match placeholder="Choose column...">{{$select.selected}}</ui-select-match>
-      <ui-select-choices repeat="column in columnNames | remove:visualization.options.startDate | remove:visualization.options.endDate | remove:visualization.options.groupBy">
-        <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
-        <small class="text-muted" ng-bind="columns[column].type"></small>
-      </ui-select-choices>
-    </ui-select>
+  <ul class="tab-nav">
+    <li ng-class="{active: currentTab == 'general'}"><a ng-click="currentTab='general'">General</a></li>
+    <li ng-class="{active: currentTab == 'groups'}"><a ng-click="currentTab='groups'">Groups</a></li>
+  </ul>
+
+  <div ng-show="currentTab == 'general'">
+    <div class="form-group">
+      <label class="control-label">Event Title</label>
+      <ui-select name="form-control" required ng-model="visualization.options.eventTitle">
+        <ui-select-match placeholder="Choose column...">{{$select.selected}}</ui-select-match>
+        <ui-select-choices repeat="column in columnNames | remove:visualization.options.startDate | remove:visualization.options.endDate | remove:visualization.options.groupBy">
+          <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
+          <small class="text-muted" ng-bind="columns[column].type"></small>
+        </ui-select-choices>
+      </ui-select>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label">Start Date</label>
+      <ui-select name="form-control" required ng-model="visualization.options.startDate">
+        <ui-select-match placeholder="Choose column...">{{$select.selected}}</ui-select-match>
+        <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.endDate | remove:visualization.options.groupBy">
+          <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
+          <small class="text-muted" ng-bind="columns[column].type"></small>
+        </ui-select-choices>
+      </ui-select>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label">End Date</label>
+      <ui-select name="form-control" ng-model="visualization.options.endDate" class="clearable">
+        <ui-select-match allow-clear="true" placeholder="Choose column...">
+          {{$select.selected}}
+        </ui-select-match>
+        <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.startDate | remove:visualization.options.groupBy">
+          <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
+          <small class="text-muted" ng-bind="columns[column].type"></small>
+        </ui-select-choices>
+      </ui-select>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label">Group by</label>
+      <ui-select name="groupby" ng-model="visualization.options.groupBy" class="clearable">
+        <ui-select-match allow-clear="true" placeholder="Choose column...">
+          {{$select.selected}}
+        </ui-select-match>
+        <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.startDate | remove:visualization.options.endDate">
+          <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
+          <small class="text-muted" ng-bind="columns[column].type"></small>
+        </ui-select-choices>
+      </ui-select>
+    </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label">Start Date</label>
-    <ui-select name="form-control" required ng-model="visualization.options.startDate">
-      <ui-select-match placeholder="Choose column...">{{$select.selected}}</ui-select-match>
-      <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.endDate | remove:visualization.options.groupBy">
-        <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
-        <small class="text-muted" ng-bind="columns[column].type"></small>
-      </ui-select-choices>
-    </ui-select>
+  <div ng-show="currentTab == 'groups'">
+    <table class="table table-condensed col-table">
+      <thead>
+      <th>Name</th>
+      <th>Color</th>
+      </thead>
+      <tbody>
+      <tr ng-repeat="(name, options) in visualization.options.groups">
+        <td>{{name}}</td>
+        <td>
+          <input class="form-control" type="color" ng-model="options.color"/>
+        </td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 
-  <div class="form-group">
-    <label class="control-label">End Date</label>
-    <ui-select name="form-control" ng-model="visualization.options.endDate" class="clearable">
-      <ui-select-match allow-clear="true" placeholder="Choose column...">
-        {{$select.selected}}
-      </ui-select-match>
-      <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.startDate | remove:visualization.options.groupBy">
-        <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
-        <small class="text-muted" ng-bind="columns[column].type"></small>
-      </ui-select-choices>
-    </ui-select>
-  </div>
-
-  <div class="form-group">
-    <label class="control-label">Group by</label>
-    <ui-select name="groupby" ng-model="visualization.options.groupBy" class="clearable">
-      <ui-select-match allow-clear="true" placeholder="Choose column...">
-        {{$select.selected}}
-      </ui-select-match>
-      <ui-select-choices repeat="column in columnNames | remove:visualization.options.eventTitle | remove:visualization.options.startDate | remove:visualization.options.endDate">
-        <span ng-bind-html="column | highlight: $select.search"></span><span> </span>
-        <small class="text-muted" ng-bind="columns[column].type"></small>
-      </ui-select-choices>
-    </ui-select>
-  </div>
 </div>
