--- a/client/app/visualizations/calendar/calendar.html
+++ b/client/app/visualizations/calendar/calendar.html
@@ -1,12 +1,1 @@
-<div class="pull-right t-header">
-  <div class="btn-group dropdown" uib-dropdown="">
-    <button type="button" class="btn btn-default btn-sm dropdown-toggle" aria-haspopup="true" uib-dropdown-toggle="" aria-expanded="false">
-      {{calendarViews[options.currentView].label}} <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu pull-right" uib-dropdown-menu="">
-      <li ng-repeat="(view, info) in calendarViews"><a ng-click="changeView(view)">{{info.label}}</a></li>
-    </ul>
-  </div>
-</div>
-
-<div class="t-header" ui-calendar="uiConfig.calendar" calendar="theCalendar" ng-model="eventSources"></div>
+<div class="t-header" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
