--- a/client/app/visualizations/calendar/calendar.html
+++ b/client/app/visualizations/calendar/calendar.html
@@ -1,1 +1,1 @@
-<div class="t-header" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+<div class="t-header" ui-calendar="uiConfig.calendar" ng-model="calendarEvents"></div>
